# iploop-platform

./: .env  .env.example  PRD-INTEGRATION.md  PROXY_COMPARISON_TABLE.md  README.md  SDK_ENHANCED_SUMMARY.md  TECHNICAL_COMPARISON.md  docker-compose.yml  technical_comparison.html  test_enhanced_features.sh
.github/workflows/: ci.yml
credits/: DESIGN.md  schema.sql
dashboard/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: layout.tsx  portal-login-form.tsx  sidebar.tsx  world-map.tsx
deploy/: docker-compose.prod.yml
deploy/nginx/: nginx.conf
docker-node/: .dockerignore  Dockerfile  go.mod  main.go
docker-node/credits/: credits.go
docs/: IPLoop_Future_Development_PRD.md  IPLoop_Platform_PRD.md  SCALING_PLAN.md  partner-proxy-integration.md
earn-landing/: dashboard.html  index.html  privacy.html  scrape-results.html  signup.html  terms.html
home-page/: Dockerfile  index.html
home-page/sdk/: iploop-sdk-1.0.21-pure.dex  iploop-test-1.0.21.apk
landing/: index.html
nginx-proxy/: nginx.conf
node-sdk/: README.md
node-sdk/android/: build-apk.sh  settings.gradle.kts
node-sdk/android/app/: build.gradle.kts  proguard-rules.pro
node-sdk/ios/IPLoopNode/: Package.swift
scripts/migrations/: 002_billing.sql  003_notifications.sql
sdk/android/: IMPLEMENTATION_SUMMARY.md  README.md  build-fat-jar.sh  build.gradle.kts  gradle.properties  proguard-rules.pro  settings.gradle.kts
sdk/android-java/: .gitignore  FullTest.java  SimpleTest.java  build.sh
sdk/android-java/production-app/: AndroidManifest.xml  ProductionDeployment.java  build.sh
sdk/android-java/test/: DexTest.java  EnhancedSDKTest.java  MockIPLoopSDK.java
sdk/android-java/test-app/: AndroidManifest.xml  build.sh  debug.keystore
sdk/android/example/: MainActivity.kt  activity_main.xml
sdk/android/lib/: iploop-sdk-1.0.5-fat.dex
sdk/ios/: Package.swift  README.md
sdk/linux-test/: ws_test  ws_test.cpp
sdk/macos/: Package.swift  README.md
sdk/module-loader/: MODULE_LOADER_DESIGN.md  modules_config.json
sdk/module-loader/src/: ModuleManager.java
sdk/node/: LICENSE  README.md  package.json
sdk/node/src/: client.js  exceptions.js  headers.js  index.js  retry.js  session.js  support.js
sdk/nodejs/: .gitignore  README.md  package-lock.json  package.json
sdk/nodejs/src/: index.ts
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/iploop/: __init__.py  async_client.py  client.py  concurrent.py  exceptions.py  fingerprint.py  headers.py  retry.py  support.py
sdk/python/iploop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/iploop/sites/: __init__.py  amazon.py  ebay.py  extractors.py  google.py  instagram.py  linkedin.py  nasdaq.py  reddit.py  tiktok.py  twitter.py  youtube.py
sdk/windows/: IPLoopSDK.csproj  README.md
sdk/windows-cpp/: CMakeLists.txt  README.md  build_test.bat  build_test.sh
sdk/windows-cpp/examples/: CMakeLists.txt  advanced_example.cpp  basic_example.cpp  c_api_example.c  main.cpp  v2_binary_example.cpp
sdk/windows-cpp/include/: iploop_sdk.h
sdk/windows-cpp/include/IPLoop/: Callbacks.h  IPLoopSDK.h  ProxyConfig.h  Types.h
sdk/windows-cpp/src/: BandwidthTracker.cpp  DeviceInfo.cpp  IPLoopSDK.cpp  Logger.cpp  ProxyConfig.cpp  TunnelManager.cpp  WebSocketClient.cpp  iploop_sdk.cpp  tunnel.cpp  tunnel.h  utils.cpp  utils.h  websocket.cpp  websocket.h
sdk/windows-cpp/src/internal/: BandwidthTracker.h  DeviceInfo.h  Logger.h  TunnelManager.h  Utils.h  WebSocketClient.h
sdk/windows/src/: IPLoopSDK.cs  NativeExports.cs
services/autoscaler/: Dockerfile  go.mod  main.go
services/billing/: Dockerfile  go.mod  go.sum
services/customer-api/: Dockerfile  package-lock.json  package.json
services/customer-api/src/: server.js
services/dashboard/: Dockerfile  next.config.js  package.json
services/dashboard/pages/: dashboard.js  index.js  login.js  signup.js
services/dashboard/styles/: globals.css
services/dashboard/utils/: api.js
services/node-registration/: Dockerfile  go.mod  go.sum
services/notifications/: go.mod
services/proxy-gateway/: Dockerfile  ENHANCED_FEATURES.md  go.mod  go.sum
services/ws-stability-test/: .gitignore  TODO.md
services/ws-stability-test/backups/: main.go.v2.0-backup-20260214
services/ws-stability-test/sdk/: IPLoopSDK.java  StabilityTestSDK.java
services/ws-stability-test/server/: .gitignore  Dockerfile  go.mod  go.sum  main.go  main.go.bak-pre-sed
services/ws-stability-test/tests/: browser-load-test.js  tunnel-load-test.sh
shared/config/: prometheus.yml
shared/database/: init.sql
support-agent/: AGENT.md
test-server/: package-lock.json  package.json  server.js
tests/: uc0-beta-test.js
tests/demand-sdk/: PLAYBOOK.md  README.md  test_countries.py  test_full.py  test_performance.py  test_scraping.py  test_sticky.py
tests/demand-sdk/results/: 2026-02-20.json  2026-02-20.md
tests/pilot/: README.md  auth-test.js  bandwidth-test.js  concurrency-edge.js  connection-limits.js  failure-test.js  geo-test.js  latency-test.js  leak-test.js  peer-behavior-test.js  protocol-test.js  report_1770332044159.json  report_1770332544634.json  report_1770332636836.json  report_1770333898815.json  report_1770335739599.json  report_1770337614580.json  report_1770339464756.json  report_1770341339734.json  report_1770343180177.json  report_1770343729541.json  report_1770345022758.json  report_1770346873273.json  report_1770348748245.json  report_1770350588890.json  report_1770352463580.json  report_1770354314062.json  report_1770354567797.json  report_1770355225315.json  report_1770356158026.json  report_1770357998754.json  report_1770359873628.json  report_1770361723929.json  report_1770363598664.json  report_1770365439329.json  report_1770366409168.json  report_1770367282081.json  report_1770369132253.json  report_1770371007378.json  report_1770372847867.json  (+788 more)
tests/pilot/dashboard/: 003-integration-review.md  007-sales-strategy-meeting.md  008-competitor-outreach-research.md  app.html  (+23 more)
(+4695 files in other folders)
