[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iploop"
version = "1.3.0"
description = "Residential proxy SDK — one-liner web fetching through millions of real IPs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [{name = "IPLoop", email = "partners@iploop.io"}]
keywords = ["proxy", "residential", "scraping", "web", "rotating"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["aiohttp>=3.8"]

[project.urls]
Homepage = "https://iploop.io"
Documentation = "https://docs.iploop.io"
Repository = "https://github.com/iploop/iploop-python"
